test doc for procedure

--- a/snooty.toml
+++ b/snooty.toml
@@ -5,3 +5,5 @@ title = "Spark Test Landing"
 service-fullname = "MongoDB Atlas"
 service = "Atlas"
 Service = "Atlas"
+compass = "MongoDB Compass"
+compass-short = "Compass"
